Modified by Arthur Khusnutdinov (forpdfsending@gmail.com), July-August 2011
   - Implemented new functionality to form a diff between revisions in the repository
   - Code cleanup
   - Revision history moved from the phpsvnclient.php to the file ChangeLog.txt

Modified by Arthur Khusnutdinov (forpdfsending@gmail.com), July 2011
   - Implemented functional run the necessary script at the end of the 
 functional checkout and svnupdate. It may be useful for automating the 
 deployment site. For example, after filling sources to the site is often 
 necessary to fill the sql dump into the database on the hosting.

Modified by Arthur Khusnutdinov (forpdfsending@gmail.com), June 2011
   - Updated phpdoc
   - Added README.md
   - Implemented pseudo-svnupdate functional

Modified by Ethan Smith (ethan@3thirty.net), April 2008   
   - Added support for non-standard port numbers (rewrote cleanURL)   
   - getFileLogs will now include an array of files, if multiple  
 have been modified files are 
   - added setRepository method, to fix mis-spelling of old   
 setRespository method
   - various bugfixes (out by one error on getFileLogs)   
  
Modified by Ethan Smith (ethan@3thirty.net), June 23 2008 
   - Removed references to storeFileLogs as a member variable - it's  
 now a local variable within getFileLogs() called $fileLogs
   - getFile() now checks if you are requesting a directory, and  
  will return false if you are.   
   - Added a new parameter to run getDirectoryTree non- recursively   
  
Modified by Per Soderlind (per@soderlind.no), August 13 2008  
   - Added support for LP2:BASELINE-RELATIVE-PATH in  
 storeDirectoryFiles()
   - In storeDirectoryFiles(), changed if{} elseif {} to switch {}
 since it's faster :) 
  
Modified by Dmitrii Shevchenko (dmitrii.shevchenko@gmail.com), 
  August 17 2008  
   - minor change to getDirectoryTree() function  
   - added checkOut() function
  
Modified by Rasmus Berg Palm (rasmusbergpalm@gmail.com),  
  28 October 2009 